<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SaraBurger</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="action_settings">Settings</string>
    <string name="welcome_saraburger">Welcome to SaraBurger</string>
    <string name="add_item">Add Item</string>
    <string name="returnButton">Return</string>
    <string name="category">Category</string>
    <string name="food">Food</string>
    <string name="quantity">Quantity</string>
    <string name="remove">Remove</string>
    <string name="update">Update</string>
    <string name="search">Search</string>
    <string name="showAll">Show All</string>
    <string name="description">Description</string>
    <string name="price">Price</string>
    <string name="size">Size</string>

</resources>
